--- a/index.html
+++ b/index.html
@@ -4,63 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Jamaludin Ahmad Rifai</title>
+
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <a href="#">Home</a>
         <a href="#">Download CV</a>
         <a href="#">Contact</a>
         <a href="#">EAEAEA</a>
     </nav>
 
-    <hr/>
 
-    <header style="text-align: center;">
+    <header style="text-align: center;" class="profile">
         <img src="Img/meme.jpg" height="200" width="200" style="border-radius: 50%;"/>
         <h1>Jamaludin Ahmad Rifai</h1>
         
     </header>
-
-    <hr/>
-    <article>
+    <article class="about">
         <h3 style="text-align:center">About Me</h3>
-        <p>HI! saya adalah seorang programmer Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui earum debitis repellat rerum tempore quidem, magni vitae ut quam quos animi! Ea eveniet, fuga magnam iste repudiandae nisi vel asperiores.</p>
+        <p>HI! saya adalah seorang programmer. Saya meyukai dunia pemrograman dan senang menciptakan solusi kreatif melalui kode. Selain itu, saya juga tertarik dengan teknologi terbaru dan selalu bersemangat untuk belajar hal-hal baru dalam bidang teknologi informasi</p>
     </article>
-    <div style="width: 100; max-height: 600; background-color: aqua ;">
-        <table></table>
+    <div class="skill-bg">
+        <table border="1" width="60%" style="margin: auto;" class="skill">
+            <thead>
+                <tr>
+                    <td>Soft Skills</td>
+                    <td>Hard Skills</td>
+                </tr>
+            </thead>
+    
+            <tbody>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Fast Learning</li>
+                            <li>Problem Solving</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Javascript</li>
+                            <li>Java</li>
+                            <li>C#</li>
+                            <li>Laravel</li>
+                            <li>PHP</li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>    
+        </table>
     </div>
-
-    <hr/>
-
-    <table border="1" width="60%" style="margin: auto;">
-        <thead>
-            <tr>
-                <td>Soft Skills</td>
-                <td>Hard Skills</td>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>
-                    <ul>
-                        <li>Beribadah</li>
-                        <li>Berdoa</li>
-                        <li>Sholat 5 waktu</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Berjalan kaki</li>
-                        <li>Kerja Keras</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-
-    </table>
-    <hr/>
 
     <p style="text-align:center">Copyright Jamaludin Ahmad Rifai</p>
 
