--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#">Home</a>
+        <a href="/index.html">Home</a>
         <a href="#">Download CV</a>
         <a href="#">Contact</a>
-        <a href="#">EAEAEA</a>
+        <a href="/about.html">ABOUT ME</a>
     </nav>
 
 
